--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 body {
-      background-color: #F8F8F8;
+      background-color: #f8f8f8;
       font-family: Montserrat, Helvetica, sans-serif;
     }
 
     #title {
-      background-color: #333;
+      background-color: #f8f8f8;
       /* Black background color */
       position: fixed;
       /* Make it stick/fixed */
@@ -24,7 +24,17 @@ body {
       /* margin-right: auto; */
       /* border-bottom:  */
     }
-
+    .nyctreemap path:hover {
+      fill:red !important;
+      
+    }
+    .StatenIsland:hover {
+      fill: red !important;
+    }
+    .boroughBtn:focus {
+      background-color: #333;
+      padding-top: 20px;
+    }
     #container {
       margin-top: 80px;
       display: flex;
@@ -41,106 +51,5 @@ body {
       fill: grey;
     }
 
-    #stationPopover {
-      position: absolute;
-      text-align: center;
-      padding: 10px;
-      font-size: 15px;
-      font-family: Montserrat;
-      background-color: #fff;
-      border-width: 2px;
-      border-style: solid;
-      border-color: red;
-      border-radius: 7px;
-      pointer-events: none;
-      opacity: 0;
-    }
 
-    #zipPopOver {
-      position: fixed;
-      text-align: center;
-      padding: 10px;
-      font-size: 15px;
-      font-family: Montserrat;
-      background-color: rgba(73, 92, 107, 0.8);
-      border-radius: 5px;
-      pointer-events: none;
-      opacity: 0;
-      color: white;
-      width: 200px;
-      left: 650px;
-      top: 120px;
-    }
-
-    /* .zipPopOver {
-
-        } */
-    #stops {
-      z-index: 150;
-      fill: white;
-      stroke: #888;
-    }
-
-    #routes {
-      stroke: #888;
-      stroke-width: 3;
-      fill: none;
-      z-index: 1000;
-    }
-
-    #menu {
-      display: inline-block;
-    }
-
-    #subwayOption {
-      /* position: relative;
-            top:100px;
-            left:1000px; */
-      /* display: inline-block; */
-      width: 294px;
-      display: inline-block;
-
-      background-color: rgba(100, 116, 128, 0.2);
-
-      border: none;
-      color: white;
-      padding: 10px 28px;
-      text-align: center;
-      text-decoration: none;
-      font-family: Helvetica;
-      display: inline-block;
-      font-size: 15px;
-      font-family: Montserrat;
-    }
-
-    #cuisineList {
-      /* padding-top: 200px; */
-      width: 294px;
-      display: inline-block;
-      height: 800px;
-      overflow-y: scroll;
-      list-style-type: none;
-      padding-left: 0;
-      /* color:aliceblue; */
-      font-family: Montserrat;
-      line-height: 30px;
-      /* background-color: rgba(100, 116, 128, 0.2); */
-      /* color: aliceblue; */
-    }
-
-    #cuisineList li {
-      color: #F8F8F8;
-      background-color: rgba(100, 116, 128, 0.2);
-      /* background-color: rgba(30, 215, 96, 0.1); */
-      padding-top: 5px;
-      padding-left: 10px;
-      margin-bottom: 2px;
-    }
-
-    #legend {
-      position: fixed;
-      top: 120px;
-      font-family: Montserrat;
-      color: white;
-
-    }
+    
